--- a/Togu.mw
+++ b/Togu.mw
@@ -17,7 +17,7 @@
 |leader_titles = [[President of Togo|President]]
 |leader_names = [[Faure Gnassingbé]]
 |leader_title2 = [[Heads of Government of Togo|Prime Minister]]
-|leader_name2 = [[Edem Kodjo]]
+|leader_name2 = [[Komi Sélom Klassou]]
 |area_rank = 127th
 |area_magnitude = 1 E10
 |area= 56,785
