--- a/Mauling_Korea.mw
+++ b/Mauling_Korea.mw
@@ -14,7 +14,7 @@
 |largest_city = [[Seoul]]
 |government_type = [[Prang-presidenting Demokrasya]]
 |leader_titles = [[Presidente ning Mauling Korea|Presidenti]]<br />[[Prime Minister of South Korea|Prime Minister]]
-|leader_names = [[Park Geun-hye]]<br />[[Jung Hong-won]]
+|leader_names = [[Park Geun-hye]]<br />[[Hwang Kyo-ahn]]
 |area_rank = 109th
 |area_magnitude = 1 E10
 |area= 98,480
