([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Saigon 12.jpg]] → [[File:Crossing of Lê Lợi and Đồng Khởi, District 1, HCMC.jpg]] [[c:COM:FR#reasons|File renaming criterion #2]]: To change from a meaningless or ambiguous name to a name that d...

--- a/Lakanbaleng_Hồ_Chí_Minh.mw
+++ b/Lakanbaleng_Hồ_Chí_Minh.mw
@@ -116,7 +116,7 @@ Image:Saigon_8.jpg|Saigon meakua ibat keng eruplanu
 Image:Saigon_9.jpg|Saigon meakua ibat keng eruplanu
 Image:Saigon_10.jpg|Saigon meakua ibat keng eruplanu
 Image:Saigon_11.jpg|Louis Vuitton a tinda'an king 
-Image:Saigon_12.jpg|Crossroads Le Loi - Dong Khoi
+Image:Crossing of Lê Lợi and Đồng Khởi, District 1, HCMC.jpg|Crossroads Le Loi - Dong Khoi
 Image:Saigon_13.jpg|Ben Thanh palengki
 Image:Saigon_14.jpg|Saigon keng dalanstreet scene
 Image:Saigon_15.jpg|Center of Saigon
