*Empty MediaWiki Message*

--- a/Banglades.mw
+++ b/Banglades.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 |native_name = <big>গনপ্রজাতন্ত্রী বাংলাদেশ</big><br />''Gônoprojatontri Bangladesh''
-|conventional_long_name = People's Republic of Bangladesh
+|conventional_long_name = Pangmaldang Republika ning Banglades
 |common_name = Bangladesh
 |image_flag = Flag of Bangladesh.svg
 |image_coat = Coat of arms of Bangladesh.svg
