*Empty MediaWiki Message*

--- a/Rusia.mw
+++ b/Rusia.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
-|native_name              = Российская Федерация<br />Rossiyskaya Federatsiya<br />Russian Federation 
-|common_name              = Russia 
+|native_name              = Российская Федерация<br />Rossiyskaya Federatsiya<br />Pederasyung Rusu 
+|common_name              = Rusya, Rusia 
 |national_motto           = none
 |national_anthem          = [[National Anthem of Russia|Hymn of the Russian Federation]] 
 |image_flag               = Flag of Russia.svg
