--- a/Suesia.mw
+++ b/Suesia.mw
@@ -15,7 +15,7 @@
 |largest_city = [[Stockholm]]
 |government_type = [[Constitutional monarchy|Constitutional&nbsp;monarchy]]
 |leader_titles = •[[Monarch of Sweden|King]]<br />•[[Prime Minister of Sweden|Prime Minister]]
-|leader_names = [[Carl XVI Gustaf of Sweden|Carl XVI Gustaf]]<br />[[Fredrik Reinfeldt]]
+|leader_names = [[Carl XVI Gustaf of Sweden|Carl XVI Gustaf]]<br />[[Stefan Löfven]]
 |accessionEUdate = [[January 1]], [[1996]]
 |area_rank = 55th
 |area_magnitude = 1 E11
