--- a/Suesia.mw
+++ b/Suesia.mw
@@ -56,7 +56,7 @@
 }}
 
 
-Ing '''Sweden''', peka-aus '''Kaarian ning Sweden''' ([[Swedish language|Swedish]]: {{Audio|Sv-Konungariket_Sverige.ogg|''Konungariket Sverige''}}), metung yang  [[Nordic countries|Nordic a bangsa]] king [[Scandinavian Telapulu]] king [[Pangulung Europa]]. Ing kayang lakanbalen [[tungku]] iyapin ing [[Stockholm]]. Makapadurut ya kareng [[Norway]] (albugan), [[Finland]] (pangulungaslagan), ing [[Skagerrak]], [[Kattegat]] at [[Oresund]] [[strait]] (maulingalbugan) at ing [[Baltic Dayat Malat]] (aslagan). Atin yang maritime borders king [[Denmark]], [[Germany]], [[Poland]], [[Russia]], [[Lithuania]], [[Latvia]], at [[Estonia]], at maksuglung ya naman keng [[Denmark]] (maulingalbugan) kapamilatna ning [[Öresund a Tete]]. Kayanib ya keng [[Pianmetung a Europa]] manibat 1995.
+Ing '''Swesya''' o '''Suecia''', pekayaus '''Kaarian ning Sweden''' ([[Swedish language|Swedish]]: {{Audio|Sv-Konungariket_Sverige.ogg|''Konungariket Sverige''}}), metung yang  [[Nordic countries|Nordic a bangsa]] king [[Scandinavian Telapulu]] king [[Pangulung Europa]]. Ing kayang lakanbalen [[tungku]] iyapin ing [[Stockholm]]. Makapadurut ya kareng [[Norway]] (albugan), [[Finland]] (pangulungaslagan), ing [[Skagerrak]], [[Kattegat]] at [[Oresund]] [[strait]] (maulingalbugan) at ing [[Baltic Dayat Malat]] (aslagan). Atin yang maritime borders king [[Denmark]], [[Germany]], [[Poland]], [[Russia]], [[Lithuania]], [[Latvia]], at [[Estonia]], at maksuglung ya naman keng [[Denmark]] (maulingalbugan) kapamilatna ning [[Öresund a Tete]]. Kayanib ya keng [[Pianmetung a Europa]] manibat 1995.
 
 
 {{Nordic Countries}}
