--- a/Amanung_Sweku.mw
+++ b/Amanung_Sweku.mw
@@ -1,1 +1,6 @@
-Tjääna fan din lille negerlänning.
+Ing '''Amanung Sweku''' (''Svenska'') metung ya kareng pamyalita king [[Europe|Europa]].
+
+{{Suli}}
+
+[[Category:Deng amanung Indoeuropeu]]
+[[Category:Deng amanu king Europa]]
