*Empty MediaWiki Message*

--- a/Amanung_Sweku.mw
+++ b/Amanung_Sweku.mw
@@ -3,4 +3,5 @@ Ing '''Amanung Sweku''' (''Svenska'') metung ya kareng pamyalita king [[Europe|E
 {{Suli}}
 
 [[Category:Deng amanung Indoeuropeu]]
+[[Category:Deng amanung Ermaniku]]
 [[Category:Deng amanu king Europa]]
