*Empty MediaWiki Message*

--- a/Amanung_Ingles.mw
+++ b/Amanung_Ingles.mw
@@ -1,3 +1,4 @@
+[[File:Anglospeak.svg|thumb|350px|Ing ''angloespera''.]]
 Ing '''Amanung Ingles''' (''English language'') metung ya kareng pamyalita king yatu.
 
 ==Suglung palwal==
