*Empty MediaWiki Message*

--- a/Amanung_Ingles.mw
+++ b/Amanung_Ingles.mw
@@ -6,3 +6,6 @@ Ing '''Amanung Ingles''' (''English language'') metung ya kareng pamyalita king 
 * [http://www.lel.ed.ac.uk/research/gsound/Eng/Database/Phonetics/Englishes/Home/HomeMainFrameHolder.htm Accents of English from Around the World (University of Edinburgh)] Sound files comparing how 110 words are pronounced in 50 English accents from around the world
 
 {{Suli}}
+
+[[Category:Deng amanu king Europa]]
+[[Category:Deng amanung Ermaniku]]
