*Empty MediaWiki Message*

--- a/Alemanya.mw
+++ b/Alemanya.mw
@@ -86,7 +86,7 @@
 |footnote1                   = [[Danish language|Danish]], [[Low German]], [[Sorbian languages|Sorbian]], [[Romani language|Romany]] and [[Frisian language|Frisian]] are officially recognized and protected by the [[European Charter for Regional or Minority Languages|ECRML]].
 }}
 
-Ing '''Alemania''' ([[Aleman (amanu)|Aleman]]: ''Deutschland''), ing aus opisial '''Republikang Federal ning Alemania'''({{Audio-de|Bundesrepublik Deutschland|De-Bundesrepublik_Deutschland-pronunciation.ogg}}), metung yang bangsa king [[Kalibudtang Europa]]. Ing sepu na king pangulu iyapin ing [[Pangulung Dayat Malat]], [[Denmark]], at ing [[Dayat Malat ning Baltic]], king aslagan ing [[Poland]] at ing [[Czech Republik]]a, king mauli ing [[Austria]] at [[Switzerland]], at king albugan ing [[France]], [[Luxembourg]], [[Belgium]] at ing [[Netherlands]].
+Ing '''Alemanya''' ([[Aleman (amanu)|Aleman]]: ''Deutschland''), ing aus opisial '''Republikang Federal ning Alemania'''({{Audio-de|Bundesrepublik Deutschland|De-Bundesrepublik_Deutschland-pronunciation.ogg}}), metung yang bangsa king [[Kalibudtang Europa]]. Ing sepu na king pangulu iyapin ing [[Pangulung Dayat Malat]], [[Denmark]], at ing [[Dayat Malat ning Baltic]], king aslagan ing [[Poland]] at ing [[Czech Republik]]a, king mauli ing [[Austria]] at [[Switzerland]], at king albugan ing [[France]], [[Luxembourg]], [[Belgium]] at ing [[Netherlands]].
 
 Ing Germany metung yang [[Constitutional democracy|democratic]] parliamentaryung [[Federation|federal]] republika, a atin 16 [[States of Germany|states]], at nung nu neng misan timawa lang gagalo lual ning federasyun. Keng kasalesalayan, deti dakal lang timawang bangsa a atin sariling amlat, kalinangan, kasalpantayanan, ing Germany [[German unification|pisantmetung]] la bilang [[Nation-state|bangsang state]] inyang [[Franco-Prussian Labanan]] inyang 1870/1871. 
 
