*Empty MediaWiki Message*

--- a/Amanung_Sweku.mw
+++ b/Amanung_Sweku.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Sweku''' (''Svenska'', [[Amanung Ingles|Ingles]]: ''Swedish'', [[Amanung Espanyol|Espanyol]]: ''Sueco'') metung ya kareng pamyalita king [[Europe|Europa]].
+Ing '''Amanung Sweku''' (''Svenska'', [[Amanung Ingles|Ingles]]: ''Swedish'', [[Espanyol (amanu)|Espanyol]]: ''Sueco'') metung ya kareng pamyalita king [[Europe|Europa]].
 
 {{Suli}}
 
