--- a/Sardinia.mw
+++ b/Sardinia.mw
@@ -5,7 +5,7 @@
 |fullname          = Labuad Autonomia della Sardegna<br />Regione Autònoma de sa Sardigna
 |isocode           = &nbsp;
 |capital           = [[Cagliari]]
-|governor          = [[Renato Soru]]<br />(''Independent''-''[[The Union (political coalition)|Union]]'')
+|governor          = [[Francesco Pigliaru]]<br />([[Partito Democratico (Italia)|PD]]'')
 |zone              = [[Insular Italy]]
 |province          = [[Province of Cagliari|Cagliari]]<br />[[Province of Carbonia-Iglesias|Carbonia-Iglesias]]<br />[[Province of Medio Campidano|Medio Campidano]]<br />[[Province of Nuoro|Nuoro]]<br />[[Province of Ogliastra|Ogliastra]]<br />[[Province of Olbia-Tempio|Olbia-Tempio]]<br />[[Province of Oristano|Oristano]]<br />[[Province of Sassari|Sassari]]
 |municipality      = 377
