--- a/India.mw
+++ b/India.mw
@@ -6,7 +6,7 @@
 |image_coat = Emblem of India.svg
 |symbol_type = Emblem
 |national_motto = "[[Satyameva Jayate]]"<br />[[Sanskrit language|Sanskrit]]: सत्यमेव जयते<br />{{IPA|/sətyəmeːvə ɟəjəteː/}}<br />("Truth Alone Triumphs")
-|image_map = India in its region (undisputed).svg
+|image_map = LocationIndia.png
 |national_anthem = "[[Jana Gana Mana]]<br />{{Audio|Jana Gana Mana.ogg|listen}}"<br />{{IPA|/ɟənə gəɳə mənə/}}|
 official_languages = [[Hindi]], [[English language|English]], and [[List of national languages of India|21 other languages]]
 |capital = [[New Delhi]]
@@ -51,59 +51,6 @@ official_languages = [[Hindi]], [[English language|English]], and [[List of nati
 |*Includes census data from [[Jammu and Kashmir]], [[Azad Kashmir]], and [[Aksai Chin]]
 }}
 Ing '''Republica ning India''' ([[Hindi]] {{lang|sa|भारत गणराज्य}} ''{{IAST|[[Bhāratavarsha|Bhārata Gaṇarājya]]''; lawen ya rin [[List of country names in various languages (D-I)#I|aliwang lagyu]]}}), kebaluan bilang '''India''', metung yang sovereign a bangsa king [[Mauling Asia]]. Iti ing pang[[List of countries and outlying territories by total area|pitung-pekamaragul]] a bangsa karas keng dagul ningkayang geografia, ing [[List of countries by population|pangaduang pekamarakal a populasyun]] a bangsa, at pekamarakal a populasyun a [[liberal democracy]] keti yatu. Ding sepu na ilapin deng  [[Indian Ocean]] king mauli, ing [[Arabian Dayat Malat]] king albugan, ing [[Bay ning Bengal]] king aslagan, ing India atin yang pampang a maiggit 7000 kilometru. Ding sepu na ilapin ding [[Pakistan]] king albuganb;<ref name="Afghanistan">The Government of India also considers Afghanistan to be a bordering country. This is because it considers the entire state of [[Jammu and Kashmir]] to be a part of India including the portion bordering [[Afghanistan]]. A ceasefire sponsored by the [[United Nations]] in 1948 froze the positions of Indian and [[Pakistan]]i held territory. As a consequence, the region bordering Afghanistan is in Pakistani-administered territory.</ref> [[People's Republic of China|Tsina]], [[Nepal]], at [[Bhutan]] king pangulung-aslagan; at [[Bangladesh]] at [[Myanmar]] king aslagan.  King Indian Ocean, ing India atiu mu karin ing [[Sri Lanka]], [[Maldives]] at [[Indonesia]].
-
-{| class="infobox borderless"
-|+ National symbols of the Republic of India (Official)
-|-
-! '''National animal'''
-| 
-| [[Image:2005-bandipur-tusker.jpg|50px]]
-|-
-! '''National bird'''
-| 
-| [[Image:Pavo muticus (Tierpark Berlin) - 1017-899-(118).jpg|50px]]
-|-
-! '''National tree'''
-| 
-| [[Image:Banyan tree on the banks of Khadakwasla Dam.jpg|50px]]
-|-
-! '''National flower'''
-| 
-| [[Image:Sacred lotus Nelumbo nucifera.jpg|50px]]
-|-
-! '''National heritage animal'''
-| 
-| [[Image:Panthera tigris.jpg|50px]]
-|-
-! '''National aquatic marine mammal'''
-| 
-| [[Image:PlatanistaHardwicke.jpg|50px]]
-|-
-! '''National reptile'''
-| 
-| [[Image:King-Cobra.jpg|50px]]
-|-
-! '''National heritage mammal'''
-| 
-| [[Image:Hanuman Langur.jpg|50px]]
-|-
-! '''National fruit'''
-| 
-| [[Image:An Unripe Mango Of Ratnagiri (India).JPG|50px]]
-|-
-! '''National temple'''
-| 
-| [[Image:New Delhi Temple.jpg|50px]]
-|-
-! '''National river'''
-| 
-| [[Image:River Ganges.JPG|50px]]
-|-
-! '''National mountain'''
-| 
-| [[Image:Nanda Devi 2006.JPG|50px]]
-|-
-|}
 
 
 
