--- a/Mali.mw
+++ b/Mali.mw
@@ -14,8 +14,8 @@
 |government_type = [[Parliamentary democracy]]
 |leader_title1 = [[List of Presidents of Mali|President]]
 |leader_title2 = [[Heads of Government of Mali|Prime Minister]]
-|leader_name1 = [[Amadou Toumani Touré]]
-|leader_name2 = [[Ousmane Issoufi Maïga]]
+|leader_name1 = [[Ibrahim Boubacar Keïta]]
+|leader_name2 = [[Modibo Keita]]
 |area_rank = 24th
 |area_magnitude = 1 E12
 |area= 1,240,278 <!--U.S. state dept state.gov -->
