*Empty MediaWiki Message*

--- a/Amanung_Ivatan.mw
+++ b/Amanung_Ivatan.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Ivatan''' (''Ivatan'') metung ya kareng pamyalita king [[Pilipinas]].
+Ing '''Amanung Ivatan''' (''Ibatan'', ''Chirin nu Ivatan'') metung ya kareng pamyalita king [[Pilipinas]].
 
 ==Deng katayang Ivatan==
 ===Pikumpara kareng amanung Pilipinu===
