*Empty MediaWiki Message*

--- a/Amanung_Isnag.mw
+++ b/Amanung_Isnag.mw
@@ -1,4 +1,4 @@
-[[File:Isnag language map.png|thumb|Ing lugal da reng magsalita ning Isnag]]
+[[File:Isnag language map.png|thumb|Ing lugal da reng talasalita ning Isnag]]
 Ing '''Amanung Isnag''' (''Isneg'') metung ya kareng pamyalita king [[Pilipinas]].
 
 {{Suli}}
