*Empty MediaWiki Message*

--- a/Mark_Zuckerberg.mw
+++ b/Mark_Zuckerberg.mw
@@ -1,4 +1,4 @@
-{{pp-semi-protected|small=yes}}
+Abstact{{pp-semi-protected|small=yes}}
 {{pp-move-indef}}
 {{Infobox person
 | name=Mark Zuckerberg
