Replacing Computer-aj_aj_ashton_01.svg with [[File:Desktop_computer_clipart_-_Yellow_theme.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #2]]: Änder

--- a/Computer.mw
+++ b/Computer.mw
@@ -17,7 +17,7 @@ Magamitan la ampong dakal agagawa deng computer uling king kagiwan dang manyalik
 
 == Lon la murin ==
 {{wikiversity|Introduction to Computers}}
-{{portal|Information technology|Computer-aj aj ashton 01.svg}}
+{{portal|Information technology|Desktop computer clipart - Yellow theme.svg}}
 * [[:en:Computability theory (computer science)]]
 * [[:en:Computer generated holography]]
 * [[:en:Computer security]] and [[Computer insecurity]]
