Removing "Dominican.png", it has been deleted from Commons by [[commons:User:Ellin Beltz|Ellin Beltz]] because: Copyright violation, see [[:c:Commons:Licensing|]].

--- a/Kolehiyong_Dominikano_ning_Tarlac.mw
+++ b/Kolehiyong_Dominikano_ning_Tarlac.mw
@@ -1,6 +1,6 @@
 {{Infobox university|
  name = Kolehiyong Dominikano ning Tarlac |
- image = [[Image:Dominican.png|center|150px|Logo of Dominican College of Tarlac.]] |
+ image =|
  established = 1946 |
  type = [[Private school|Public]] |
  president = | 
