Replacing DBP_1983_1162_Edith_Stein.jpg with [[File:Saint_Edith_Stein.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: Removing (c) stamp.).

--- a/Edith_Stein.mw
+++ b/Edith_Stein.mw
@@ -5,7 +5,7 @@
 |feast_day=August 9
 |venerated_in=[[Roman Catholicism]]
 |birth_name=Edith Stein
-|image=DBP 1983 1162 Edith Stein.jpg
+|image=Saint Edith Stein.jpg
 |imagesize=205px
 |caption=Linwal ne ning [[Deutsche Bundespost|German Postal Service]] ing selyung magparangal kang Stein anyang 1983 
 |birth_place=[[Wrocław|Breslau]], [[Province of Silesia|Silesia]], [[Kingdom of Prussia]], [[German Empire]]<br>(now [[Wrocław]], Poland)
