--- a/Asteroyde.mw
+++ b/Asteroyde.mw
@@ -1,4 +1,4 @@
-Ing '''asteroid''' balamu [[planeta]] ya, oneng mas malati ya. Ing kabalduga'na ning katayang "asteroid," "balamu batwin" king matwang amanung [[:en:Greek|Greek]]. Lupa lang mangalating batwin king banwa, oneng manaliwa la lugal deti nung ikumpara la pusisyun kareng batwin. Kalupa da reng planeta, ala la muring sarili dang aslag deng asteroid. Uli na niti, king palage da reng dakal a tau, e masanting a lagyu ing "asteroid,' bagkus "planetoid" ("balamu planeta") ing mas bageng iyaus. 
+Ing '''asteroyde ('''asteroid''' king [[Amanung Ingles|Ingles]], '''asteroide''' king [[Espanyol (amanu)|Espanyol]]) balamu [[planeta]] ya, oneng mas malati ya. Ing kabalduga'na ning katayang "asteroid," "balamu batwin" king matwang amanung [[:en:Greek|Greek]]. Lupa lang mangalating batwin king banwa, oneng manaliwa la lugal deti nung ikumpara la pusisyun kareng batwin. Kalupa da reng planeta, ala la muring sarili dang aslag deng asteroid. Uli na niti, king palage da reng dakal a tau, e masanting a lagyu ing "asteroid,' bagkus "planetoid" ("balamu planeta") ing mas bageng iyaus. 
 
 Gawa la king [[:en:rock|batu]] deng dakal kareng asteroid, pero atin muring gawa king [[yelu]] ampong [[metal]]. King kekatamung Solar System, atilu king [[asteroid belt]] deng asteroid, ketang pilatan ning [[Mars (planet)|Mars]] 
 ampong [[Jupiter (planet)|Jupiter]].
@@ -6,4 +6,4 @@ ampong [[Jupiter (planet)|Jupiter]].
 {{stub}}
 {{Footer_SolarSystem}}
 
-[[Category:Astronomia]]
+[[Category:Astronomiya]]
