Replacing Flag_of_Viet_Nam_Peoples_Army.svg with [[File:Flag_of_the_People's_Army_of_Vietnam.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: typo fixed.).

--- a/Vo_Nguyen_Giap.mw
+++ b/Vo_Nguyen_Giap.mw
@@ -6,7 +6,7 @@
 |birth_place= [[Lộc Thủy]], [[Quảng Bình Province]], [[French Indochina]]
 |death_place= [[Hanoi]], Vietnam
 |allegiance= {{flagu|Vietnam}}
-|branch= {{flagicon image|Flag of Viet Nam Peoples Army.svg}} [[Vietnam People's Army]]
+|branch= {{flagicon image|Flag of the People's Army of Vietnam.svg}} [[Vietnam People's Army]]
 |image= Vo Nguyen Giap 2008.jpg
 |image_size=200
 |caption= I Võ Nguyên Giáp anyang 2008
