Replacing Sthelens1.jpg with [[File:Mount_St._Helens,_one_day_before_the_devastating_eruption.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Estratubulkan.mw
+++ b/Estratubulkan.mw
@@ -2,7 +2,7 @@
 
 [[File:Cono_de_Arita,_Salta._(Argentina).jpg|thumb|right|300px|Cono de Arita, a stratovolcano in Salta, [[Argentina]].]]
 
-[[File:sthelens1.jpg|thumb|right|300px|[[Mount St. Helens]] — metung a stratovolcano king U.S. state ning [[Washington]] — aldo bayu ya mamakbung ing [[Bulkang St. Helens]] inyang [[Mayu 18]], [[1980]] nung nu dakal ing milako king kayang tuktuk.]]
+[[File:Mount St. Helens, one day before the devastating eruption.jpg|thumb|right|300px|[[Mount St. Helens]] — metung a stratovolcano king U.S. state ning [[Washington]] — aldo bayu ya mamakbung ing [[Bulkang St. Helens]] inyang [[Mayu 18]], [[1980]] nung nu dakal ing milako king kayang tuktuk.]]
 
 [[File:Rainierreflect1.jpg|thumb|right|300px|Mt. Rainier, a stratovolcano in Washington.]]
 
