--- a/Canada.mw
+++ b/Canada.mw
@@ -13,7 +13,7 @@ official_languages = [[Canadian English|English]] at [[French language|French]] 
 government_type = <small>[[Federation|Federal]] [[parliamentary democracy]]<br />at [[constitutional monarchy]]</small>|
 leader_titles = <br />[[Monarchy in Canada|Monarch]]<br />[[Governor General of Canada|Governor General]]<br />[[Prime Minister of Canada|Prime Minister]]<br />|
 
-leader_names = [[Elizabeth II of Canada|Queen Elizabeth II]]<br />[[Michaëlle Jean]]<br />[[Stephen Harper]]|
+leader_names = [[Elizabeth II of Canada|Queen Elizabeth II]]<br />[[Michaëlle Jean]]<br />[[Justin Trudeau]]|
 sovereignty_type = [[History of Canada|Katimawan]] |
 established_events = &nbsp;- [[British North America Act|BNA Act]]<br />&nbsp;- [[Statute of Westminster 1931|Statute of Westminster]]<br />&nbsp;- [[Canada Act 1982|Canada Act]]|
 established_dates = Ibat [[United Kingdom]]<br />[[Juliu 1]], [[1867]]<br />[[Disiembri 11]], [[1931]]<br />[[Abril 17]], [[1982]] |
