*Empty MediaWiki Message*

--- a/Iraqi_Kurdistan.mw
+++ b/Iraqi_Kurdistan.mw
@@ -53,3 +53,4 @@
 [[Category:Politics of Iraq]]
 [[Category:Divided regions|Kurdistan, Iraqi]]
 [[Category:Kurdish inhabited region]]
+[[bcl:Rona nin Iraking Kurdistan]]
