--- a/Nepal.mw
+++ b/Nepal.mw
@@ -12,9 +12,9 @@ national_anthem = [[Rastriya Gaan]] |
 official_languages = [[Nepali language|Nepali]] |
 capital = [[Kathmandu]] |
 latd = 27|latm=42|latNS=N|longd=85|longm=19|longEW=E |
-government_type = [[Constitutional monarchy]] |
-leader_titles = [[Kings of Nepal|King]]<br />[[List of Prime Ministers of Nepal|Prime Minister]] |
-leader_names = [[Gyanendra of Nepal|Gyanendra]]<br />[[Girija Prasad Koirala]]|
+government_type = [[Democratic republic]] |
+leader_titles = [[Presidents of Nepal|President]]<br />[[List of Prime Ministers of Nepal|Prime Minister]] |
+leader_names = [[Bidhya Devi Bhandari]]<br />[[Khadga Prasad Sharma Oli]]|
 largest_city = [[Kathmandu]] |
 area = 147,181 |
 areami²=56,827 <!-- Do not remove per [[WP:MOSNUM]] -->|
