--- a/Banilak.mw
+++ b/Banilak.mw
@@ -38,6 +38,8 @@ Image: Ketapang5small.jpg | Ketapang Leaves from Singapore
 Image: KetapangGreenLeaves.jpg | Ketapang Green Leaves from Singapore, Before Falling To The Ground
 
 Image: KetepangTrees.jpg | Ketapang Trees from Singapore, Next To Road and HDB Flats
+
+Terminalia catappa MHNT.BOT.2007.27.25.jpg|Terminalia catappa - Museum specimen
 </gallery>
 
 {{commons category|Terminalia catappa}}
