Iurung ya ing miyalilan 276021 nang [[Special:Contributions/80.187.106.102|80.187.106.102]] ([[User talk:80.187.106.102|Talk]])

--- a/Micronesia.mw
+++ b/Micronesia.mw
@@ -1,12 +1,8 @@
-Als Minronesien vor 25 jahren von Kaiser Ken, Moritz dem Eroberen und König Nick Kellermann erobert wurde, wurde es in 3 gebiete gegeilt. 
+:''Ing arikulung ini tungkul ya king kalabuwaran. Para king magsariling estadu, lawen ye ing [[Federated States of Micronesia]].''
 
-Die Koksregion, wo König Nick Kellermann seine rieigen Kokain-Plantagen mit 15000 Neger-Sklaven hatte. 
+[[File:Micronesia-large.png|thumb|right|350px|Karinan ning Micronesia.]]
+Ing '''Micronesia''', ibat keng [[ancient Greek]] ''μικρος'' (malati) at ''νησος'' (pulu), iya ing bansag keng labuad king [[Pacific Ocean]]. Ing [[Filipinas]] atiu king albugan, [[Indonesia]] king mauling albugan, [[Papua New Guinea]] at [[Melanesia]] king mauli, at [[Polynesia]] king mauling-aslagan at aslagan. 
 
-Die Industrieregion, wo Moritz der Eroberer seine Pornoindustrie erschaffen hat und die Pornos weltweit vertreibt. Am besten sind die SCAT pornos meinte der König Nick Kellermann. 
-
-Und die Urlaubsregion, wo Kaiser Ken die ganzen Urlauberinnen mit dem Koks von König Nick Kellermann verwirrt machte und sie hinter her zu Moritz dem Eroberer brachte damit er die Pornos drehen konnte. 
-
-Die drei Regionen lebten in völliger Harmonie zusammen bis die Neger-Sklaven eines Tages einen aufstand begannen und versuchten die drei Großherren zu töten. Allerdings ging das schief das die drei so geil sind das sie unsterblich erklärt wurden von Gott persönlich (und besondern Kaiser Ken). Nach dem Mordanschlag wurden alle Neger-Frauen in ein Zuchtheim gesteckt und nur noch für die zeugung neuer Neger-Sklaven verwendet.
 
 == Kasusug Kilwal ==
 * [http://www.mapsouthpacific.com/micronesia/index.html Map of Micronesia]
