*Empty MediaWiki Message*

--- a/Tajikistan.mw
+++ b/Tajikistan.mw
@@ -1,6 +1,6 @@
 {{Infobox_Country
 |native_name = ҷумҳурии Тоҷикистон<br />جمهوری تاجیکستان<br />Jumhurii Tojikiston
-|conventional_long_name =Republic of Tajikistan
+|conventional_long_name =Republika ng Tayikistan
 |common_name =Tajikistan 
 |image_flag = Flag of Tajikistan.svg
 |image_coat =Coat of arms of Tajikistan.svg
@@ -51,7 +51,7 @@
 |calling_code = 992
 |footnotes = 1.) Rank based on U.N. 2005 figures. Estimate based on CIA figures for 2006.
 }}
-Ing '''Tajikistan''' ({{lang-tg|Тоҷикистон}}, [[IPA]]: {{IPA|[toʤikɪsˈton]}} or {{IPA|[tɒːʤikɪsˈtɒn]}}), opisyal a aus, ing  '''Republic of Tajikistan'''  o kaya keng amanung English, ing '''Republic of Tajikistan''' ({{lang-tg|ҷумҳурии Тоҷикистон}}) metung yang bulubundkin a [[gabunkandadu]]ng bangsa king [[Kalibudatarang Asia]]. Ding sepu na ilapin ding king [[Afghanistan]] king mauli, [[Uzbekistan]] king albugan, [[Kyrgyzstan]] king pangulu, at [[Tsina]] king aslagan.  Keraklan kareng populasyun ning Tajikistan [[Tajiks|Tajik]] la katutubu, nung nu kalupa da la kalinangan at amlat deng [[Iranian peoples|Iranian a tau]] at [[Uzbek a tau]] at ing amanu ra [[Tajik amanu]].  Misan ing karinan da meging lang [[Samanid dynasty|Samanid Empire]], ing Tajikistan meging yang metung kareng republica ning  [[Soviet Union]] inyang [[pang20 a dilanwa]], kebaluan bilang [[Tajik SSR|Tajik Soviet Socialist Republic]].
+Ing '''Tayikistan''' ([[Amanung Ingles|Ingles]]: ''Tajikistan'', {{lang-tg|Тоҷикистон}}, [[IPA]]: {{IPA|[toʤikɪsˈton]}} or {{IPA|[tɒːʤikɪsˈtɒn]}}), opisyal a aus, ing  '''Republic of Tajikistan'''  o kaya keng amanung English, ing '''Republic of Tajikistan''' ({{lang-tg|ҷумҳурии Тоҷикистон}}) metung yang bulubundkin a [[gabunkandadu]]ng bangsa king [[Kalibudatarang Asia]]. Ding sepu na ilapin ding king [[Afghanistan]] king mauli, [[Uzbekistan]] king albugan, [[Kyrgyzstan]] king pangulu, at [[Tsina]] king aslagan.  Keraklan kareng populasyun ning Tajikistan [[Tajiks|Tajik]] la katutubu, nung nu kalupa da la kalinangan at amlat deng [[Iranian peoples|Iranian a tau]] at [[Uzbek a tau]] at ing amanu ra [[Tajik amanu]].  Misan ing karinan da meging lang [[Samanid dynasty|Samanid Empire]], ing Tajikistan meging yang metung kareng republica ning  [[Soviet Union]] inyang [[pang20 a dilanwa]], kebaluan bilang [[Tajik SSR|Tajik Soviet Socialist Republic]].
 
 [[File:Somoni monument.JPG|thumb|200px|Modern Tajiks proudly view the Persian [[Samanid|Samanid Empire]]
 [[File:Tajikistan satellite photo.jpg|thumb|250px|Satellite a larauan ning Tajikistan]]
