*Empty MediaWiki Message*

--- a/Tajikistan.mw
+++ b/Tajikistan.mw
@@ -53,7 +53,7 @@
 }}
 Ing '''Tayikistan''' ([[Amanung Ingles|Ingles]]: ''Tajikistan'', {{lang-tg|Тоҷикистон}}, [[IPA]]: {{IPA|[toʤikɪsˈton]}} or {{IPA|[tɒːʤikɪsˈtɒn]}}), opisyal a aus, ing  '''Republic of Tajikistan'''  o kaya keng amanung English, ing '''Republic of Tajikistan''' ({{lang-tg|ҷумҳурии Тоҷикистон}}) metung yang bulubundkin a [[gabunkandadu]]ng bangsa king [[Kalibudatarang Asia]]. Ding sepu na ilapin ding king [[Afghanistan]] king mauli, [[Uzbekistan]] king albugan, [[Kyrgyzstan]] king pangulu, at [[Tsina]] king aslagan.  Keraklan kareng populasyun ning Tajikistan [[Tajiks|Tajik]] la katutubu, nung nu kalupa da la kalinangan at amlat deng [[Iranian peoples|Iranian a tau]] at [[Uzbek a tau]] at ing amanu ra [[Tajik amanu]].  Misan ing karinan da meging lang [[Samanid dynasty|Samanid Empire]], ing Tajikistan meging yang metung kareng republica ning  [[Soviet Union]] inyang [[pang20 a dilanwa]], kebaluan bilang [[Tajik SSR|Tajik Soviet Socialist Republic]].
 
-[[File:Somoni monument.JPG|thumb|200px|Modern Tajiks proudly view the Persian [[Samanid|Samanid Empire]]
+[[File:Somoni monument.JPG|thumb|200px|Modern Tajiks proudly view the Persian [[Samanid|Samanid Empire]]]]
 [[File:Tajikistan satellite photo.jpg|thumb|250px|Satellite a larauan ning Tajikistan]]
 [[File:Tajik mountains.jpg|thumb|250px|Ding bunduk ning Tajikistan]]
 
