--- a/Argentina.mw
+++ b/Argentina.mw
@@ -84,6 +84,7 @@ Ing Argentina iya ing pekamatas a [[Human Development Index]] a antas ampong pan
 {{reflist}}
 : 5. [http://www.argentina.ar Official website]
 
+{{Commons|Argentina}}
 [[Category:Argentina| ]]
 [[Category:Mauling America]]
 [[Category:Spanish speaking countries]]
