*Empty MediaWiki Message*

--- a/Ricky_Martin.mw
+++ b/Ricky_Martin.mw
@@ -6,6 +6,6 @@ I '''Ricky Martin''' (mibayit '''Enrique Martín Morales''', 24 Disyembri 1971 k
 {{commons}}
 * [http://rickymartinmusic.com Sityu Opisyal]
 * {{IMDb name|id=0005193|name=Ricky Martin}}
-*Ricky Martin Foundation links – [http://www.rickymartinfoundation.org/ Official site] / king [http://www.oprah.com/uyl/volunteer/children/vol_children_atrisk_25.jhtml [[Oprah's Angel Network]] site]
+*Ricky Martin Foundation links – [http://www.rickymartinfoundation.org/ Official site] / king [http://www.oprah.com/uyl/volunteer/children/vol_children_atrisk_25.jhtml [[:en:Oprah's Angel Network|Oprah's Angel Network]] site]
 
 {{Suli}}
