*Empty MediaWiki Message*

--- a/Turtle_Islands.mw
+++ b/Turtle_Islands.mw
@@ -15,6 +15,9 @@
 
 Ing '''Turtle Islands''' metung yang   [[Ding Balen ning Filipinas|balen]] a kabilugan da ring aptas a pulu king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Tawi-Tawi|Tawi-Tawi]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 3,600 a katau kareng 646 a pamimalemale.
 
+==Deng Barangay==
+* Taganak Poblacion 
+* Likud Bakkao
 
 
 ==Suglung Palwal==
