Removing "TSULOGO.png", it has been deleted from Commons by [[commons:User:Ymblanter|Ymblanter]] because: .

--- a/Tarlac_State_University.mw
+++ b/Tarlac_State_University.mw
@@ -3,7 +3,7 @@
 | name           = Tarlac State University
 || native_name   = ''Pambansang Universidad ning Tarlac''
 || latin_name    = [[:la:Pambansang Pilipinas|Pambansang Pilipinas]]
-|| image         = [[File:TSULOGO.png|180px|TSULOGO]]
+|| image         =
 || established   = 1906
 || type          = [[Public university|Public, State University]]
 || president     = Dr. Priscilla C. Viuya, Ph.D.
