--- a/Lakanbalen_ning_Tarlac.mw
+++ b/Lakanbalen_ning_Tarlac.mw
@@ -63,8 +63,94 @@
 Ing '''Tarlac Lakanbalen''' pangatlu yang klasing lakanbalen king lalawigan ning [[Tarlac]], [[Filipinas]]. Iti ing tungku lakanbalen  ning [[Tarlac]]. Agpang keng [[2000]] sensus, atin yang papulasyun a 262,481 a katau ka reng 51,703 a pamimalemale.
 
 ==Barangay==
+==Barangay==
 
-Ing Tarlac Lakanbalen atin yang  76 [[barangay]].
+Ing Siyudad Tarlac atin yang 76 [[barangay]].
+
+<table border=0><tr>
+<td valign=top>
+* Aguso  
+* Alvindia Segundo 
+* Amucao 
+* Armenia 
+* Asturias 
+* Atioc 
+* Balanti 
+* Balete 
+* Balibago I 
+* Balibago II 
+* Balingcanaway 
+* Banaba 
+* Bantog 
+* Baras-baras 
+* Batang-batang 
+* Binauganan 
+* Bora 
+* Buenavista 
+* Buhilit (Bubulit) 
+* Burot 
+* Calingcuan 
+* Camiling
+* Capehan 
+* Carangian 
+* Care 
+* Central 
+* Culipat 
+</td><td valign=top>
+* Cut-cut I 
+* Cut-cut II 
+* Dalayap 
+* Dela Paz 
+* Dolores 
+* Laoang 
+* Ligtasan 
+* Lourdes 
+* Mabini 
+* Maligaya 
+* Maliwalo 
+* Mapalacsiao 
+* Mapalad 
+* Matatalaib 
+* Paraiso 
+* Poblacion 
+* Salapungan 
+* San Carlos 
+* San Francisco 
+* San Isidro 
+* San Jose 
+* San Jose de Urquico
+* San Juan Bautista ( formerly Matadero)
+* San Juan de Mata 
+* San Luis 
+</td><td valign=top>
+* San Manuel 
+* San Miguel 
+* San Nicolas 
+* San Pablo 
+* San Pascual 
+* San Rafael 
+* San Roque 
+* San Sebastian 
+* San Vicente 
+* Santa Cruz (Alvindia Primero) 
+* Santa Maria 
+* Santo Cristo 
+* Santo Domingo 
+* Santo Niño 
+* Sapang Maragul 
+* Sapang Tagalog 
+* Sepung Calzada 
+* Sinait 
+* Suizo 
+* Tariji 
+* Tibag 
+* Tibagan 
+* Trinidad (Trinidad Primero) 
+* Ungot 
+* Villa Bacolor 
+</td></tr></table>
+
+
 
 =='''Amlat o Kasalesayan'''==
 
