makaredirekta king mimiral a bulung

--- a/Syudad_ning_Tarlac.mw
+++ b/Syudad_ning_Tarlac.mw
@@ -1,106 +1,1 @@
-[[Image:Ph locator tarlac tarlac2.png|right|200px|Mapa ning Tarlac papakit ne ing Siyudad ning Tarlac ]]
-[[File:Tarlac City 1.JPG|200px|thumbnail|right|Tarlac City]]
-[[File:Tarlac City 2.JPG|200px|thumbnail|right|MacArthur Highway]]
-Ing '''Syudad Tarlac''' pangatlu yang klasing siyudad king lalawigan ning [[Tarlac]], [[Filipinas]]. Iti ing syudad kapital ning [[Tarlac]]. Agpang keng [[2000]] sensus, atin yang papulasyun a 262,481 a katau ka reng 51,703 a pamimalemale.
-
-==Barangay==
-
-Ing Siyudad Tarlac atin yang  76 [[barangay]].
-
-<table border=0><tr>
-<td valign=top>
-* Aguso  
-* Alvindia Segundo 
-* Amucao 
-* Armenia 
-* Asturias 
-* Atioc 
-* Balanti 
-* Balete 
-* Balibago I 
-* Balibago II 
-* Balingcanaway 
-* Banaba 
-* Bantog 
-* Baras-baras 
-* Batang-batang 
-* Binauganan 
-* Bora 
-* Buenavista 
-* Buhilit (Bubulit) 
-* Burot 
-* Calingcuan 
-* Camiling
-* Capehan 
-* Carangian 
-* Care 
-* Central 
-* Culipat 
-</td><td valign=top>
-* Cut-cut I 
-* Cut-cut II 
-* Dalayap 
-* Dela Paz 
-* Dolores 
-* Laoang 
-* Ligtasan 
-* Lourdes 
-* Mabini 
-* Maligaya 
-* Maliwalo 
-* Mapalacsiao 
-* Mapalad 
-* Matatalaib 
-* Paraiso 
-* Poblacion 
-* Salapungan 
-* San Carlos 
-* San Francisco 
-* San Isidro 
-* San Jose 
-* San Jose de Urquico
-* San Juan Bautista ( formerly Matadero)
-* San Juan de Mata 
-* San Luis 
-</td><td valign=top>
-* San Manuel 
-* San Miguel 
-* San Nicolas 
-* San Pablo 
-* San Pascual 
-* San Rafael 
-* San Roque 
-* San Sebastian 
-* San Vicente 
-* Santa Cruz (Alvindia Primero) 
-* Santa Maria 
-* Santo Cristo 
-* Santo Domingo 
-* Santo Niño 
-* Sapang Maragul 
-* Sapang Tagalog 
-* Sepung Calzada 
-* Sinait 
-* Suizo 
-* Tariji 
-* Tibag 
-* Tibagan 
-* Trinidad (Trinidad Primero) 
-* Ungot 
-* Villa Bacolor 
-</td></tr></table>
-
-==Amlat o Kasalesayan==
-
-==Pamagsiasat==
-
-==Suglung Palwal==
-
-*[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
-*[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
-
-{{Tarlac}}
-
-{{Philippines-geo-stub}}
-
-[[Category:Cities in the Philippines]]
+#REDIRECT [[Tarlac Lakanbalen]]
