miragdagan kebaluan (impormasyon)

--- a/Lakanbalen_ning_Tarlac.mw
+++ b/Lakanbalen_ning_Tarlac.mw
@@ -63,8 +63,6 @@
 Ing '''Tarlac Lakanbalen''' pangatlu yang klasing lakanbalen king lalawigan ning [[Tarlac]], [[Filipinas]]. Iti ing tungku lakanbalen  ning [[Tarlac]]. Agpang keng [[2000]] sensus, atin yang papulasyun a 262,481 a katau ka reng 51,703 a pamimalemale.
 
 ==Barangay==
-==Barangay==
-
 Ing Siyudad Tarlac atin yang 76 [[barangay]].
 
 <table border=0><tr>
@@ -156,10 +154,294 @@ Ing Siyudad Tarlac atin yang 76 [[barangay]].
 
 =='''Pamagsiasat'''==
 
+==Media==
+* DZMC 91.1 TNC Promotions & Advertising Inc.
+* DWXT-FM 96.1 Radyo Pilipino Corp.
+* DZTC-AM Radyo Pilipino Corp.
+* ABS-CBN Channel 32
+* CLTV 36
+* CNN Philippines Channel 26
+* MYX Channel 66 Tarlac
+* TV5 Channel 24 Tarlac
+* ABS-CBN Sports+Action Channel 36 Tarlac 
+* Local TV Tarlac Channel 6
+* GMA Channel 10 Dagupan
 
+==Panipagaral (Edukasyon)==
+===Tertiary===
+Tertiary educational institutions:<ref name=schools>http://www.pinoyschools.com/mun_city/297</ref>
+{{columns-list|2|
+* AMA Computer Learning Center
+* AMA Computer University - Tarlac
+* Asian Institute of Computer Studies
+* Central Luzon Doctors' Hospital-Educational Institution
+* College of the Holy Spirit of Tarlac
+* CSU
+* Ecumenical Christian College
+* Ednor Colleges
+* Fundamental baptist college for asian
+* International Systems College
+* Osias Colleges
+* Our Lady of Peace College Seminary
+* Philippine Women's University
+* Saint Luke College Foundation
+* St. Augustine School of Nursing
+* St. Paul College of Tarlac
+* STI College - Tarlac
+* Tarlac Christian College
+* [[Tarlac State University]]
+* Tarlac Technical Institute College Foundation
+* Tarlac School of Arts and Trade, Incorporated
+* United School of Science and Technology
+* Dominican College of Tarlac
+}}
+
+===Secondary schools===
+Public Schools:<ref name=schools/>
+{{columns-list|2|
+* Alvindia-Aguso National High School
+* Amucao National High School
+* Amucao National High School - Annex
+* Balaoang national high school
+* Balibago Primero Integrated School
+* Central Azucarera de Tarlac National High School
+* Maliwalo National High School
+* Maliwalo National High School - Annex
+* San Manuel High School - Main
+* San Manuel High School - Annex
+* [[Tarlac National High School|Tarlac National High School - Main]]
+* Tarlac National High School - Annex
+* Capas High School 
+* Tibag High School
+}}
+
+Private Schools:<ref name=schools/>
+{{columns-list|2|
+* Academia de Santiago
+* Bayanihan Institute
+* Central Luzon Doctor's Hospital Educational Institution
+* [[College of the Holy Spirit of Tarlac]]
+* [[Don Bosco Technical Institute, Tarlac]]
+* Ecumenical Christian College (High school and Elementary)
+* Maligaya Trinity Baptist Christian Academy Inc.
+* Osias Colleges, Inc
+* Our Lady of Ransom Catholic School
+* San Clemente high school
+* San Luis Educational Foundation
+* San Sebastian Cathedral School
+* St. Mathew Christian Academy
+* St. Paul Children Spectrum, Inc.
+* Tarlac Christian College
+* Tarlac First Baptist Church School (TFBCS)
+* Tarlac Living Faith Academy
+* Tarlac Montessori School, Inc.
+* Tarlac Scholastica High School
+* Trinity Christian Learning Center
+* UCCP Tarlac Christian Academy (UTCA) High School
+}}
+
+===Elementarya===
+Public Schools:<ref name=schools/>
+{{columns-list|3| 
+* Sta.Cruz Tarlac City
+* Alvindia Elementary School
+* Alvindia-Aguso Central Elementary School
+* Amucao Elementary School
+* Apalang Public School
+* Aringin Elementary School
+* Armenia Elementary School
+* Asturias Public School
+* Atencio Public School
+* Atioc-Dela Paz Elementary School
+* Bacuit Elementary School
+* Bagong Barrio Elementary School
+* Balanti Elementary School
+* Balete Elementary School
+* Balibago Primero Elementary School
+* Balibago Segundo Elementary School
+* Balingcanaway Centro Elementary School
+* Balingcanaway Corba Elementary School
+* Banaba Elementary School
+* Banaoang East Public School
+* Banaoang West Public School
+* Bantog Elementary School
+* Baquero Norte Elementary School
+* Baquero Sur Public School
+* Baras-Baras Elementary School
+* Batangbatang Elementary School
+* Binauganan Elementary School
+* BotbotonES Elementary School
+* Buenavista Public School
+* Buhilit Public School
+* Burgos Elementary School
+* Burot Elementary School
+* C.A.T. Elementary School
+* Caanamongan Elementary School
+* Cabugbugan Elementary School
+* Cadaldulaoan Public School
+* Calamay Elementary School
+* Calapan Public School
+* Calipayan Elementary School
+* Camangaan Public School
+* Camp Aquino Elementary School
+* Camposanto Elementary School
+* Capaoayan Public School
+* Capehan Public School
+* Carangian Elementary School
+* Care Elementary School
+* Cutcut II Elementary School
+* Dalayap Elementary School
+* Damaso Briones Elementary School
+* Dolores Elementary School		
+* Don Bonifacio Alviar Elementary School
+* Don F. P. Buan Elementary School (San Luis Elementary School)
+* Don Pepe Cojuangco Public School
+* Dona Arsenia Elementary School
+* Labney Elementary School
+* Laoang Elementary School
+* Lapsing Public Schoo
+* Lawacamulag Elementary School
+* Lourdes Elementary School
+* Mabini Elementary School
+* Macaguing Public School
+* Maligaya Elementary School
+* Maliwalo Central Elementary School
+* Maluac Elementary School
+* Mapalacsiao Elementary School
+* Mapalad Public School
+* Matatalaib Bato Elementary School
+* Matatalaib Buno Elementary School
+* Moncada North Central School
+* Moncada South Central School
+* Nambalan Elementary School
+* Natividad L. De Leon Public School
+* Northern Hill Elementary School
+* Pag-Asa Public School
+* Paniqui South Central Elementary School
+* Paquilliao Public School
+* Paradise Elementary School
+* Paraiso Elementary School
+* Pilipila Elementary School
+* Pinpinas Elementary School
+* Pugo Cecilio Public School
+* Samberga Elementary School
+* San Carlos Public School
+* San Francisco Elementary School
+* San Francisco Elementary School
+* San Isidro Elementary School
+* San Jose de Urquico Public School
+* San Jose Elementary School
+* San Juan Bautista Elementary School
+* San Juan De Mata Elementary School
+* San Juan Elementary School
+* San Julian Elementary School
+* San Leon Public School
+* San Manuel Elementary School
+* San Miguel Central School
+* San Nicolas Elementary School
+* San Pablo Elementary School
+* San Pascual Elementary School
+* San Pedro Elementary School
+* San Rafael Elementary School
+* San Roque Public School
+* San Sebastian Elementary School
+* San Sotero Public School
+* [[San Vicente Elementary School - Main]]
+* San Vicente Elementary School - Annex
+* Sapang Elementary School
+* Sapang Maragul Elementary School
+* Sapang Tagalog Elementary School
+* Sepung Calzada Elementary School
+* Sinait Elementary School
+* Sitio Dam Public School
+* Sta. Cruz Public School
+* Sta. Ignacia North Central School
+* Sta. Ignacia South Central Elementary School
+* Sta. Ines Central Elementary School
+* Sta. Ines East Elementary School
+* Sta. Ines West Elementary School
+* Sta. Ines West Elementary School - Sta. Ines PS Annex
+* Sta. Lucia Elementary School
+* Sta. Maria Elementary School	
+* Sta. Maria Public School
+* Sta. Monica Elementary School	
+* Sto. Cristo Integrated School
+* Sto. Domingo Elementary School
+* Sto. Nino Public School
+* Suizo Resettlement Elementary School
+* Suizo-Bliss Elementary School
+* Taguiporo-Cabaruan Elementary School
+* Tagurarit Public School
+* Tariji Elementary School
+* Tarlac West Elementary School
+* Tibag Elementary School
+* Tibagan Elementary School
+* Timmaguab Elementary School
+* Tolega Norte Elementary School
+* Tolega Sur Public School
+* Trinidad Elementary School
+* Tubectubang Elementary School
+* Ungot Elementary School
+* Vargas Elementary School
+* Villa Bacolor Elementary School
+* Villa Public School
+* Yabutan Public School
+}}
+
+Private Schools:<ref name=schools/>
+{{columns-list|3|
+* Adventist Elementary School of Camiling
+* Adventist Elementary School of Carino
+* Adventist Elementary School of Iba (Western Tarlac Adventist Multigrade School)
+* Adventist Elementary School of San Felipe
+* Adventist Elementary School of Sulipa (Rodrigo A. Fernando Mem. Adventist School)
+* Asian Power School of English 
+* Bayanihan Institute
+* Bible Believers Baptist Academy
+* Blessed Metropolitan Christian Academy
+* Central Luzon Doctors' Hospital Educational Institution
+* City Sunrise School
+* Colegio de San Isidro
+* College of the Holy Spirit
+* Cosmopolitan Institute
+* Creston Academy 
+* [[Don Bosco Technical Institute, Tarlac]]
+* Ecumenical Christian College
+* Failane Young Achieves School
+* Fairlane Young Achievers School
+* Maligaya Trinity Baptist Christian Academy Inc.
+* Martinet School
+* Montesun School Inc.
+* New Christian Academy
+* Osias Colleges, Inc.
+* Phil. Tarlac Kian Tiak Institute, Inc.
+* Precious Child School, Inc.
+* San Luis Educational Foundation
+* Scholastica de Leau Mer Academy
+* St. Michael the Archangel School of Tarlac
+* St. Paul Children Spectrum, Inc.
+* St. Vincent School Foundation Inc.
+* Tarlac Adventist Elem. School
+* Tarlac Christian Learning Center
+* Tarlac Christian College
+* Tarlac First Baptist Church School (TFBCS)
+* Tarlac Living Faith Academy
+* Joy Ecumenical Christian Academy Inc.
+* Tarlac Montessori School, Inc.
+* Trinity Christian Learning Center
+* United Church Ecumenical School Foundation Inc. (UCESFI) San Miguel, Tarlac City
+}}
+
+==Deng kapatad a lakanbalen==
+* Angeles Lakanbalen, Pampanga
+* Taguig Lakanbalen, Keragulang Menila
+* Baguio Lakanbalen, Benguet
+* Bauan, Batangas
+
+==Dalerayan==
+{{reflist}}
 
 ==Kasusug Kilwal==
-
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
 
